volexc/tests/ui/check_message_index_zero.out
Error: index 0 is reserved in message `Foo`
   ╭─[ check_message_index_zero.vol:3:16 ]
   │
 3 │     bar: u32 = 0;
   │                ┬  
   │                ╰── indices must be >= 1
───╯